3az-cluster-pattern/kustomize/stretchtest/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logger-vm
  name: logger-vm
spec:
  ports:
    - port: 8080
      protocol: TCP 
  selector:
    app: logger-vm
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: logger-vm-ssh
  labels:
    app: logger-vm
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  selector:
    app: logger-vm
